--- a/index-vue.html
+++ b/index-vue.html
@@ -11,14 +11,23 @@
 <body>
   <div id="app">
     <header>
-      <div class="wrap mb-5">
-        <div class="logo">
-          <img src="assets/img/logo.png" alt="logo">
-        </div>
+      <div class="d-flex justify-content-between ps-3 pe-3">
+        <img src="assets/img/logo.png" alt="logo">
+        <select class=" mt-3"
+          @change="getApi"
+          v-model="searchGen"
+       >
+          <option value="all"> Seleziona un genere</option>
+          <option 
+            :value="genre"  
+            v-for="genre in genres"> 
+              {{genre}}
+          </option>
+        </select>
       </div>
     </header>
     <main>
-      <div class="container">
+      <div class="container mb-5 mt-5">
         <div class="row d-flex justify-content-center"> 
 
             <div class="box col-md-4 col-lg-3 m-3 text-center"  
@@ -28,7 +37,7 @@
               <span class="fw-normal ">{{album.author}}</span>
               <span>{{album.year}}</span>
             </div>
-            
+            <h3 style="color:white" class="text-center"> Numero album: {{albums.length}} </h3>
         </div>
       </div>
     </main>
